--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,13 @@
 *.zip
 *.tar.gz
 *.rar
+*.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 *.xml
 
-.idea/workspace.xml
+.idea/
+reliableUDP.iml
+*.iml
