--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+reliableUDP/.idea/workspace.xml
+reliableUDP/.idea/encodings.xml
+reliableUDP/.idea/dictionaries/sergi.xml
+reliableUDP/.idea/workspace.xml
+reliableUDP/out/artifacts/reliableUDP_jar/reliableUDP.jar
+reliableUDP/out/production/reliableUDP/META-INF/MANIFEST.MF
+reliableUDP/src/META-INF/MANIFEST.MF
