--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ reliableUDP/.idea/workspace.xml
 reliableUDP/out/artifacts/reliableUDP_jar/reliableUDP.jar
 reliableUDP/out/production/reliableUDP/META-INF/MANIFEST.MF
 reliableUDP/src/META-INF/MANIFEST.MF
+reliableUDP/.idea/workspace.xml
